Add root config and index.html for phase2 rebuild

--- a/index.html
+++ b/index.html
@@ -2,12 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Meridian Strategic – AI‑driven strategy, data and defense solutions." />
+    <!-- Primary Meta Tags -->
+    <meta name="description" content="Meridian Strategic delivers resilient AI‑driven solutions for defence, infrastructure and logistics." />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Meridian Strategic" />
+    <meta property="og:description" content="Strategic AI for a Resilient World" />
+    <meta property="og:image" content="/src/assets/hero.webp" />
+    <meta property="og:url" content="https://www.meridianstrategic.io" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Meridian Strategic" />
+    <meta name="twitter:description" content="Strategic AI for a Resilient World" />
+    <meta name="twitter:image" content="/src/assets/hero.webp" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Inter:wght@400;500;600&display=swap" as="style" />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Meridian Strategic",
+        "image": "/src/assets/hero.webp",
+        "url": "https://www.meridianstrategic.io",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Riverside",
+          "addressRegion": "CA",
+          "postalCode": "92501",
+          "addressCountry": "US"
+        },
+        "description": "Meridian Strategic delivers AI‑driven solutions in defence, infrastructure, data and logistics."
+      }
+    </script>
     <title>Meridian Strategic</title>
-    <link rel="icon" type="image/png" href="/src/assets/hero.jpg" />
   </head>
-  <body class="bg-darkBlue text-white">
+  <body class="bg-charcoal text-white font-sans overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
